Add working qks encryption and encryption key editing

--- a/configuration/environment/dev.yml
+++ b/configuration/environment/dev.yml
@@ -36,6 +36,8 @@ parameters:
         fViScOUIuz9FnbkWLQIDAQAB
         -----END PUBLIC KEY-----
 
+    kraken.qks.sourcekey: ''
+
     hal.agents:
         - 'localhost'
 
