--- a/configuration/environment/test.yml
+++ b/configuration/environment/test.yml
@@ -35,5 +35,7 @@ parameters:
         pLR/1o2u8njj+v/AaQIDAQAB
         -----END PUBLIC KEY-----
 
+    kraken.qks.sourcekey: ''
+
     hal.agents:
         - 'ql1haltsagt1'
