--- a/configuration/kraken/kraken.pages.yml
+++ b/configuration/kraken/kraken.pages.yml
@@ -192,6 +192,18 @@ services:
         parent: 'kraken.template'
         calls: [['setTemplate', ['kraken/application/application.edit.twig']]]
 
+    kraken.application.target.edit.page:
+        class: 'QL\Kraken\Controller\Application\EditTargetController'
+        arguments:
+            - @slim.request
+            - @kraken.application.target.edit.twig
+            - @kraken.target
+            - @session.flasher
+            - @doctrine.em
+    kraken.application.target.edit.twig:
+        parent: 'kraken.template'
+        calls: [['setTemplate', ['kraken/application/target.edit.twig']]]
+
     ####################################################################################################################
     # CRUD - ENVIRONMENT
     ####################################################################################################################
