Change /repositories to /applications

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -88,7 +88,7 @@ parameters:
     navigation.list:
         dashboard: 'Dashboard'
         queue: 'Queue'
-        repositories: 'Applications'
+        applications: 'Applications'
         servers: 'Servers'
         environments: 'Environments'
         users: 'Users'
