--- a/configuration/routes/routes.application.yml
+++ b/configuration/routes/routes.application.yml
@@ -5,9 +5,9 @@ parameters:
         # REPOSITORY ROUTES
         ################################################################################################################
 
-        repositories:
+        applications:
             method: 'GET'
-            route: '/repositories'
+            route: '/applications'
             stack: ['middleware.login', 'applications.page']
 
         repository:
