--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -261,7 +261,7 @@ parameters:
         groups:
             method: 'GET'
             route: '/groups'
-            stack: ['middleware.login', 'repositories.page']
+            stack: ['middleware.login', 'applications.page']
 
         group:
             method: 'GET'
@@ -272,7 +272,7 @@ parameters:
         group.add:
             method: ['GET', 'POST']
             route: '/groups/add'
-            stack: ['middleware.login', 'group.admin.add.page']
+            stack: ['middleware.login', 'group.add.page']
 
         ################################################################################################################
         # GROUP ROUTES - ADMIN
@@ -281,7 +281,7 @@ parameters:
         group.edit:
             method: ['GET', 'POST']
             route: '/groups/:id/edit'
-            stack: ['middleware.admin', 'group.admin.edit.page']
+            stack: ['middleware.admin', 'group.edit.page']
             conditions: {id: %routes.regex.digit%}
 
         group.remove.confirm:
@@ -292,7 +292,7 @@ parameters:
         group.remove:
             method: 'POST'
             route: '/groups/:id/remove'
-            stack: ['middleware.admin', 'group.admin.remove.handler']
+            stack: ['middleware.admin', 'group.remove.handler']
             conditions: {id: %routes.regex.digit%}
 
         ################################################################################################################
