--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "gulp-if": "^1.2.0",
         "gulp-jshint": "^1.5.3",
         "gulp-load-plugins": "^0.4.0",
+        "gulp-nunjucks": "1.0.3",
         "gulp-rename": "1.2.0",
         "gulp-sass": "1.3.3",
         "gulp-uglify": "^0.3.0",
